--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -9,11 +9,10 @@
     ]
   },
   "files": [
-    "src/main.ts",
-    "src/main.server.ts",
-    "server.ts"
+    "src/main.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.d.ts",
+    "node_modules/@angular/material/**/*.d.ts"
   ]
 }
