bakery extended and ranklist-funcionality added

--- a/backend/ITBL/appsettings.Development.json
+++ b/backend/ITBL/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=itbl;;Username=postgres;Password=2ZLT6MhnGVBjnyH"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=itbl;;Username=postgres;Password=2ZLT6MhnGVBjnyH",
   }
 }
