--- a/backend/ITBL/appsettings.json
+++ b/backend/ITBL/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=itbl;;Username=postgres;Password=2ZLT6MhnGVBjnyH"
+    "DefaultConnection": "Server=postgres.railway.internal;Port=5432;Database=railway;;Username=postgres;Password=HqtjDCxkYSeVphlFiLITazTREEslZixH"
   }
 }
